# tutor-contrib-branding

./: .bumpversion.cfg  .gitignore  .project  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml  release.yml  test.yml
tutorbranding/: __about__.py  plugin.py
tutorbranding/patches/: mfe-dockerfile-post-npm-install  mfe-dockerfile-post-npm-install-authn  mfe-dockerfile-post-npm-install-learning  mfe-dockerfile-pre-npm-install  mfe-dockerfile-pre-npm-install-account  mfe-dockerfile-pre-npm-install-course-authoring  mfe-dockerfile-pre-npm-install-discussions  mfe-dockerfile-pre-npm-install-gradebook  mfe-dockerfile-pre-npm-install-learner-dashboard  mfe-env-config-buildtime-definitions  mfe-env-config-buildtime-imports  mfe-lms-common-settings  openedx-common-settings  openedx-development-settings  openedx-dockerfile-minimal  openedx-dockerfile-pre-assets  openedx-lms-common-settings
tutorbranding/templates/brand-openedx/: package.json
tutorbranding/templates/brand-openedx-learner-dashboard/: README.rst  package-lock.json
tutorbranding/templates/brand-openedx-learner-dashboard/paragon/: _fonts.scss  _overrides.scss  _variables.scss
tutorbranding/templates/brand-openedx/paragon/: _overrides.scss
tutorbranding/templates/tasks/lms/: init
tutorbranding/templates/theme/lms/templates/: index.html
tutorbranding/templates/theme/lms/templates/certificates/: _accomplishment-rendering.html
(+18 files in other folders)
