[project]
name = "tutor-contrib-branding"
description = "Tutor plugin that simplifies branding an Open edX instance"
authors = [
  { name = "Aulasneo", email = "andres@aulasneo.com" },
]
license = { text = "AGPLv3" }
license-files = []
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "tutor>=21.0.0,<22.0.0",
  "tutor-mfe>=21.0.0,<22.0.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "build",
  "black",
  "mypy",
  "pylint",
  "twine>=6.2.0",
]

[project.urls]
Code = "https://github.com/aulasneo/tutor-contrib-branding"
Issues = "https://github.com/aulasneo/tutor-contrib-branding/issues"

[project.entry-points."tutor.plugin.v1"]
branding = "tutorbranding.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "tutorbranding/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["tutorbranding"]

[tool.hatch.build.targets.sdist]
strict-naming = false
include = ["/tutorbranding", "/README.md", "/LICENSE.txt", "/CHANGELOG.md"]
exclude = ["tests*"]
